[tool.poetry]
name = "another_expect"
version = "0.1.0"
description = "An expect function with an api and documentation to my liking"
authors = ["Philip Olson <philip.olson@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"
tedent = "^0.1.0"

[tool.poetry.dev-dependencies]
simple_chalk = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
